Edited wiki page MLOG through web user interface.

--- a/wiki/MLOG.wiki
+++ b/wiki/MLOG.wiki
@@ -4,10 +4,10 @@
 
 Team MLOG
 
- *M* arkus
- *L* orenzo
- *O* ren
- *G* avin
+ *Markus
+ *Lorenzo
+ *Oren
+ *Gavin
 
 
 We will try and record all team activity here, and use the uploads for interesting papers and code. 
