Edited wiki page Results through web user interface.

--- a/wiki/Results.wiki
+++ b/wiki/Results.wiki
@@ -1,5 +1,7 @@
 #summary One-sentence summary of this page.
 
+=Overview=
+
 <wiki:toc max_depth="3" />
 
 = Individual Tweets =
@@ -31,6 +33,9 @@
 ||Coverage of cases (0.95 level)||99.4419 %||
 ||Mean rel. region size (0.95 level)||63.6597 %||
 ||Total Number of Instances||23113||
+
+
+
 
 = All tweets of a person =
 
